Fix date input height to match other form fields on Safari

--- a/rsvp_manager/static/css/forms.css
+++ b/rsvp_manager/static/css/forms.css
@@ -90,7 +90,7 @@
 }
 
 .form-field input[type="date"] {
-    line-height: 1.4;
+    height: 34px;
 }
 
 .form-field select:invalid {
