--- a/rsvp_manager/static/style.css
+++ b/rsvp_manager/static/style.css
@@ -378,7 +378,7 @@ h2 {
 }
 
 .form-field input[type="date"] {
-    line-height: 1.4;
+    height: 34px;
 }
 
 .form-field select:invalid {
